style:security: Delete some TODO; Correct SecurityConfig; Add data-test